--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="styles/lumen.css">
     <link rel="stylesheet" href="../bower_components/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../bower_components/angular-aside/dist/css/angular-aside.min.css">
-
+    <link rel="stylesheet" href="../bower_components/ui-listView/dist/ui-listView.css">
+    <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css">
     <!-- endbuild -->
   </head>
   <body ng-app="uilabApp">
@@ -58,7 +59,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -72,6 +73,11 @@
     <script src="bower_components/angular-formly/dist/formly.js"></script>
     <script src="bower_components/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.js"></script>
     <script src="bower_components/angular-aside/dist/js/angular-aside.min.js"></script>
+    <script src="bower_components/ui-listView/dist/ui-listView.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+
+
+
 
 
 
@@ -83,6 +89,10 @@
         <script src="examples/scripts/controllers/intro-example.js"></script>
         <script src="examples/scripts/controllers/codementor.js"></script>
         <script src="scripts/controllers/designer.js"></script>
+        <script src="scripts/controllers/listpages.js"></script>
+        <script src="scripts/services/main.js"></script>
+
+
         <!-- endbuild -->
 </body>
 </html>
