Angular Form Builder Retrofit

--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,14 @@
 
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/lumen.css">
+    <link type="text/css" rel="stylesheet" href="thirdparty/angular-form-builder/angular-form-builder.css" />
+    <link type="text/css" rel="stylesheet" href="../bower_components/jquery-ui/themes/base/all.css" />
     <link rel="stylesheet" href="../bower_components/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../bower_components/angular-aside/dist/css/angular-aside.min.css">
     <link rel="stylesheet" href="../bower_components/ui-listView/dist/ui-listView.css">
     <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css">
+    <link rel="stylesheet" href="styles/lumen.css">
+
     <!-- endbuild -->
   </head>
   <body ng-app="uilabApp">
@@ -68,7 +71,17 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/api-check/dist/api-check.js"></script>
+    <script  src="thirdparty/angular-form-builder/angular-form-builder.js"></script>
+    <script  src="thirdparty/angular-form-builder/angular-form-builder-components.js"></script>
 
+    <script  src="bower_components/angular-validator/dist/angular-validator.js"></script>
+    <script  src="bower_components/angular-validator/dist/angular-validator-rules.min.js"></script>
+
+    <script  src="bower_components/jquery-ui/jquery-ui.js"></script>
+
+    <script  src="bower_components/placeholders/dist/placeholders.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
 
     <script src="bower_components/angular-formly/dist/formly.js"></script>
     <script src="bower_components/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.js"></script>
