Edit and Preview Screens

--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,10 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/common.js"></script>
+        <script src="scripts/Directive.js"></script>
+        <script src="scripts/Factory.js"></script>
+        <script src="scripts/FormConstant.js"></script>
+        <script src="scripts/formlyCustomTypes.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="examples/scripts/controllers/intro-example.js"></script>
         <script src="examples/scripts/controllers/codementor.js"></script>
