Edit and Preview Screens 2

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,8 @@
     <script  src="bower_components/placeholders/dist/placeholders.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="thirdparty/ng-string.js"></script>
+
 
     <script src="bower_components/angular-formly/dist/formly.js"></script>
     <script src="bower_components/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.js"></script>
