Further Updates to deep merge core and client meta data

--- a/app/index.html
+++ b/app/index.html
@@ -90,12 +90,7 @@
     <script src="bower_components/angular-aside/dist/js/angular-aside.min.js"></script>
     <script src="bower_components/ui-listView/dist/ui-listView.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
-
-
-
-
-
-
+    <script src="bower_components/deep-diff/releases/deep-diff-0.3.3.min.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
