--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
+    <div class="footer"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -105,6 +106,8 @@
         <script src="scripts/controllers/designer.js"></script>
         <script src="scripts/controllers/listpages.js"></script>
         <script src="scripts/services/main.js"></script>
+        <script src="scripts/services/MetaDataMergeService.js"></script>
+
 
 
         <!-- endbuild -->
