--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,8 @@
     <script src="bower_components/ui-listView/dist/ui-listView.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/deep-diff/releases/deep-diff-0.3.3.min.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -107,7 +109,8 @@
         <script src="scripts/controllers/listpages.js"></script>
         <script src="scripts/services/main.js"></script>
         <script src="scripts/services/MetaDataMergeService.js"></script>
-
+        <script src="scripts/services/PageService.js"></script>
+        <script src="scripts/services/User.js"></script>
 
 
         <!-- endbuild -->
